# chatuza_client

./: Cargo.toml  README.md  styles.css
modules/: Cargo.toml
modules/src/: lib.rs  solana_wallet.rs
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
