[package]
name = "modules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.4.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
solana-client = "1.17.14"
solana-sdk = "1.17.14"
spl-associated-token-account = "2.3.0"
spl-token = "4.0.0"
tokio = "1.35.1"
bip39 = "2.0.0"
borsh = {version = "1.3.0", features = ["derive"]}
reqwest = "0.11.23"
rust-crypto = "0.2.36"